--- a/css/styles.css
+++ b/css/styles.css
@@ -334,7 +334,7 @@ footer .footer-icons {
 .about-hero-content {
   width: 90%;
   margin: auto;
-  padding: 5rem 0 5rem 0; 
+  padding: 2rem 0 5rem 0; 
 }
 
 
